syntax = "proto3";

package api_core.transactions;

service Transactions {
    rpc SendBasic(SendBasicRequest) returns (SendResponse);
}


message SendBasicRequest {
    int64 registry_id = 1;
    int64 user_id = 2; 
    double amount = 3;
    string currency = 4;
    string label = 5;
    string description = 6;
}

message SendResponse {
    oneof payload {
        Success success = 1;
        Pending pending = 2;
        Retry retry = 3;
    }

    message Success {
        TransactionResource transaction = 1;
    }

    message Pending {
        TransactionResource transaction = 1;
    }

    message Retry {
    }
}


message TransactionResource {
    int64 registry_id = 1;
    int64 pack = 2;
    int64 created_at = 3;
    int64 source_user_id = 4;
    int64 target_user_id = 5;
    int32 sequence = 6;
    TransactionVariantResource variant = 7;
    double amount = 8;
    string currency = 9;
    string label = 10;
    string description = 11;
    bytes hash = 12;
}

enum TransactionVariantResource {
    INVALID = 0;
    BASIC = 1;
}